[gd_scene load_steps=3 format=3 uid="uid://bcnmymjri4tt2"]

[ext_resource type="Texture2D" uid="uid://brwp8bimc75uu" path="res://icon.webp" id="1"]
[ext_resource type="Script" path="res://Pseudolocalization.gd" id="2"]

[node name="Pseudolocalization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_left = 20.0
offset_top = 30.0
offset_right = -20.0
offset_bottom = 130.0
grow_horizontal = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="TextureRect" type="TextureRect" parent="Title"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="Title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Pseudolocalization Demo"
vertical_alignment = 1

[node name="Main" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 150.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Pseudolocalization_options" type="VBoxContainer" parent="Main"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="toggle" type="CheckButton" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle Pseudolocalization"

[node name="accents" type="CheckButton" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle Accents"

[node name="doublevowels" type="CheckButton" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle Double Vowels"

[node name="fakebidi" type="CheckButton" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle Fake Bidi"

[node name="override" type="CheckButton" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Toggle Override"

[node name="skipplaceholders" type="CheckButton" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skip Placeholders"

[node name="exp_ratio" type="HBoxContainer" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Main/Pseudolocalization_options/exp_ratio"]
layout_mode = 2

[node name="Label" type="Label" parent="Main/Pseudolocalization_options/exp_ratio"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
text = "Expansion Ratio : "

[node name="SpinBox" type="SpinBox" parent="Main/Pseudolocalization_options/exp_ratio"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05

[node name="prefix" type="Control" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextEdit" type="LineEdit" parent="Main/Pseudolocalization_options/prefix"]
layout_mode = 0
offset_left = 5.0
offset_top = 32.8613
offset_right = 385.0
offset_bottom = 62.8613
size_flags_horizontal = 3
caret_blink = true

[node name="Label" type="Label" parent="Main/Pseudolocalization_options/prefix"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.86133
offset_right = 297.0
offset_bottom = 28.8613
text = "Pseudolocalization Prefix :"

[node name="suffix" type="Control" parent="Main/Pseudolocalization_options"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextEdit" type="LineEdit" parent="Main/Pseudolocalization_options/suffix"]
layout_mode = 0
offset_left = 3.811
offset_top = 106.592
offset_right = 383.811
offset_bottom = 136.592
size_flags_horizontal = 3
caret_blink = true

[node name="Label" type="Label" parent="Main/Pseudolocalization_options/suffix"]
layout_mode = 0
offset_left = 6.0
offset_top = 76.5923
offset_right = 297.0
offset_bottom = 102.592
text = "Pseudolocalization Suffix :"

[node name="Pseudolocalizer" type="VBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Main/Pseudolocalizer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Pseudolocalization key :"

[node name="Key" type="TextEdit" parent="Main/Pseudolocalizer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "The quick brown fox jumped over the lazy dog."

[node name="margin" type="MarginContainer" parent="Main/Pseudolocalizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Pseudolocalize" type="Button" parent="Main/Pseudolocalizer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Pseudolocalize"

[node name="margin2" type="MarginContainer" parent="Main/Pseudolocalizer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label2" type="Label" parent="Main/Pseudolocalizer"]
layout_mode = 2
text = "Pseudolocalization result :"

[node name="Result" type="TextEdit" parent="Main/Pseudolocalizer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="A2Z" type="Label" parent="Main/Pseudolocalizer"]
layout_mode = 2
size_flags_vertical = 7
text = "ABCDEFGHIJKLMNOPQRSTUVWXYZ
abcdefghijklmnopqrstuvwxyz"

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 2

[connection signal="toggled" from="Main/Pseudolocalization_options/toggle" to="." method="_on_toggle_toggled"]
[connection signal="toggled" from="Main/Pseudolocalization_options/accents" to="." method="_on_accents_toggled"]
[connection signal="toggled" from="Main/Pseudolocalization_options/doublevowels" to="." method="_on_double_vowels_toggled"]
[connection signal="toggled" from="Main/Pseudolocalization_options/fakebidi" to="." method="_on_fake_bidi_toggled"]
[connection signal="toggled" from="Main/Pseudolocalization_options/override" to="." method="_on_override_toggled"]
[connection signal="toggled" from="Main/Pseudolocalization_options/skipplaceholders" to="." method="_on_skip_placeholders_toggled"]
[connection signal="value_changed" from="Main/Pseudolocalization_options/exp_ratio/SpinBox" to="." method="_on_expansion_ratio_value_changed"]
[connection signal="text_changed" from="Main/Pseudolocalization_options/prefix/TextEdit" to="." method="_on_prefix_changed"]
[connection signal="text_changed" from="Main/Pseudolocalization_options/suffix/TextEdit" to="." method="_on_suffix_changed"]
[connection signal="pressed" from="Main/Pseudolocalizer/Pseudolocalize" to="." method="_on_pseudolocalize_pressed"]
